--- a/dashboardv2/package.json
+++ b/dashboardv2/package.json
@@ -35,16 +35,17 @@
     "dagre-d3": "0.6.4",
     "dropzone": "5.7.0",
     "font-awesome": "4.7.0",
-    "jQuery-QueryBuilder": "2.4.3",
     "jquery": "3.5.1",
     "jquery-asBreadcrumbs": "0.2.2",
     "jquery-placeholder": "2.3.1",
+    "jQuery-QueryBuilder": "2.4.3",
     "jquery-sparkline": "2.4.0",
     "jquery-steps": "1.1.0",
     "jstree": "3.3.5",
     "lossless-json": "1.0.4",
     "moment": "2.21.0",
     "moment-timezone": "0.5.14",
+    "node-sass": "^7.0.0",
     "platform": "1.3.4",
     "pnotify": "3.2.0",
     "pretty-checkbox": "3.0.3",
@@ -68,7 +69,6 @@
     "grunt-middleware-proxy": "1.0.7",
     "grunt-sass": "3.1.0",
     "grunt-template": "1.0.0",
-    "load-grunt-tasks": "3.5.2",
-    "node-sass": "4.13.1"
+    "load-grunt-tasks": "3.5.2"
   }
 }
