--- a/webapp/src/main/webapp/login.html.template
+++ b/webapp/src/main/webapp/login.html.template
@@ -37,7 +37,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Atlas Login</title>
+    <title>Data Realm</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
     <link href="js/libs/bootstrap/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" id="bootstrap-css" />
@@ -50,9 +50,6 @@
 
 <body class="login-body">
 <div class="login-form">
-    <div class="logo-container text-center">
-        <img src="img/atlas_logo.svg" />
-    </div>
     <h4>Sign In to your account</h4>
     <form action="" method="post" accept-charset="utf-8">
         <div class="form-group icon-group user">
