--- a/webapp/src/main/webapp/login.html.template
+++ b/webapp/src/main/webapp/login.html.template
@@ -50,7 +50,8 @@
 
 <body class="login-body">
 <div class="login-form">
-    <h4>Sign In to your account</h4>
+<h2 style="text-align: center;color: #c53e6c;margin-bottom: 25px;">Data Realm</h2>
+    <h5>Sign In to your account</h5>
     <form action="" method="post" accept-charset="utf-8">
         <div class="form-group icon-group user">
             <input type="text" name="username" id="username" class="form-control" placeholder="Username" tabindex="1" required autofocus />
